# sdec

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: validate.yaml
sdec/: actuate.py  dump.py  flash.py  sdec.py
tests/: test_sdec.py
